--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,26 @@ img {
     display: block;
     max-width: 100%;
 }
+
+.timer {
+    display: flex;
+}
+
+.field {
+    display: flex;
+    flex-direction: column;   
+    text-align: center;
+}
+
+.field:not(:last-child) {
+    margin-right: 10px;
+}
+
+.value {
+    font-size: 40px;
+}
+
+.label {
+    font-size: 20px;
+    text-transform: uppercase;
+}
